# mydata

2019通年/: CheckTest6.docx  CheckTest7.docx  HitBlow.html  K19093-web-kadai.docx  auto_maze.html  binarization.html  checkTest.docx  checkTest1.docx  checkTest10.docx  checkTest13.txt  checkTest14.docx  checkTest3.docx  checkTest4.docx  checkTest5.docx  checkTest8.docx  checktest9.docx  cheketest12.txt  emoji.html  gamma.html  main.c  prog7.txt  prog8.c  prog8.txt  sonagraph.html  ロッカーをご利用ください.docx  日本国憲法回答.docx  日本語リテラシ　紙面案.docx  日本語リテラシ最終課題.docx
2019通年/02/: list2_1.html  list2_2.html  list2_3.html  list2_4.html  (+3 more)
2020前期/水曜日/adf/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
2020前期/水曜日/adf/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
2020前期/水曜日/adf/Debug/: face_k19093
2020前期/水曜日/adf/face_k19093.build/Debug/ALL_BUILD.build/: Script-E40559A108A9425AAE1A3221.sh  dgph  dgph~
2020前期/水曜日/adf/face_k19093.build/Debug/ZERO_CHECK.build/: Script-0D7FF37BB9A84D14807C2809.sh  dgph  dgph~
2020前期/水曜日/adf/face_k19093.build/Debug/face_k19093.build/: dgph  dgph~
2020前期/水曜日/adf/face_k19093.build/Debug/face_k19093.build/Objects-normal/x86_64/: face_k19093.LinkFileList  face_k19093.d
2020前期/水曜日/adf/face_k19093.xcodeproj/: project.pbxproj
2020前期/水曜日/adf/face_k19093.xcodeproj/project.xcworkspace/xcuserdata/k19093kk.xcuserdatad/: UserInterfaceState.xcuserstate
2020前期/水曜日/adf/face_k19093.xcodeproj/xcuserdata/k19093kk.xcuserdatad/xcschemes/: xcschememanagement.plist
(+748 files in other folders)
